Config travis and codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,6 @@ addons:
   chrome: stable
 
 node_js:
-  - "6"
-  - "7"
   - "8"
 
 matrix:
@@ -27,4 +25,8 @@ install:
   - npm install
 
 script:
-  - npm run ci:travis
+  - npm build
+  - npm install codecov -g
+
+after_success:
+  - codecov -t 02b6378e-c1ca-4c03-a2a5-1143a707d178
