--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,7 +1,6 @@
 codecov:
   notify:
     require_ci_to_pass: yes
-    token: 02b6378e-c1ca-4c03-a2a5-1143a707d178
 
 coverage:
   precision: 2
@@ -14,6 +13,8 @@ coverage:
     changes: no
 
 parsers:
+  javascript:
+      enable_partials: yes
   gcov:
     branch_detection:
       conditional: yes
