--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ install:
   - npm install
 
 script:
-  - npm build
-  - npm install codecov -g
+  - ng test --code-coverage
+  - ng build 
 
 after_success:
   - codecov -t 02b6378e-c1ca-4c03-a2a5-1143a707d178
