--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "types": ["node", "jasmine"],
     "typeRoots": [
       "node_modules/@types"
     ],
