--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.11",
-    "@angular/cdk": "^6.2.1",
+    "@angular/cdk": "^6.3.3",
     "@angular/common": "^5.2.11",
     "@angular/compiler": "^5.2.11",
     "@angular/core": "^5.2.11",
     "@angular/forms": "^5.2.11",
     "@angular/http": "^5.2.11",
-    "@angular/material": "^6.2.1",
+    "@angular/material": "^6.3.3",
     "@angular/platform-browser": "^5.2.11",
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/router": "^5.2.11",
     "core-js": "^2.5.7",
     "rxjs": "^5.5.11",
-    "sweetalert2": "^7.22.2",
+    "sweetalert2": "^7.25.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -36,12 +36,12 @@
     "@angular/language-service": "^5.2.11",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.112",
-    "codecov": "^3.0.2",
-    "codelyzer": "^4.3.0",
+    "@types/node": "^10.5.2",
+    "codecov": "^3.0.4",
+    "codelyzer": "^4.4.2",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
@@ -49,6 +49,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~2.5.3",
+    "typings": "^2.1.1"
   }
 }
