--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser": "^5.2.11",
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/router": "^5.2.11",
+    "adm-zip": "^0.4.11",
     "core-js": "^2.5.7",
+    "https-proxy-agent": "^2.2.0",
     "rxjs": "^5.5.11",
     "sweetalert2": "^7.26.11",
     "zone.js": "^0.8.26"
