--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ng serve",
     "test": "ng test --code-coverage --watch=false --singleRun=true --browsers=ChromeHeadless && node ./codecovcss.config.js",
     "dev-test": "ng test --code-coverage --browsers=Chrome",
+    "codecov": "codecov -t 02b6378e-c1ca-4c03-a2a5-1143a707d178",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
