Update to Angular 7

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "test": "ng test --code-coverage --watch=false --singleRun=true --browsers=ChromeHeadless && node ./codecovcss.config.js",
+    "test": "ng test --code-coverage --watch=false --browsers=ChromeHeadless && node ./codecovcss.config.js",
     "dev-test": "ng test --code-coverage --browsers=Chrome",
     "codecov": "codecov -t 02b6378e-c1ca-4c03-a2a5-1143a707d178",
     "lint": "ng lint",
@@ -13,28 +13,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.11",
-    "@angular/cdk": "^6.4.3",
-    "@angular/common": "^5.2.11",
-    "@angular/compiler": "^5.2.11",
-    "@angular/core": "^5.2.11",
-    "@angular/forms": "^5.2.11",
-    "@angular/http": "^5.2.11",
-    "@angular/material": "^6.4.3",
-    "@angular/platform-browser": "^5.2.11",
-    "@angular/platform-browser-dynamic": "^5.2.11",
-    "@angular/router": "^5.2.11",
+    "@angular/animations": "7.1.0",
+    "@angular/cdk": "^7.1.0",
+    "@angular/common": "7.1.0",
+    "@angular/compiler": "7.1.0",
+    "@angular/core": "7.1.0",
+    "@angular/forms": "7.1.0",
+    "@angular/http": "7.1.0",
+    "@angular/material": "^7.1.0",
+    "@angular/platform-browser": "7.1.0",
+    "@angular/platform-browser-dynamic": "7.1.0",
+    "@angular/router": "7.1.0",
     "adm-zip": "^0.4.11",
     "core-js": "^2.5.7",
     "https-proxy-agent": "^2.2.0",
-    "rxjs": "^5.5.11",
+    "rxjs": "^6.3.3",
     "sweetalert2": "^7.26.11",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
-    "@angular/compiler-cli": "^5.2.11",
-    "@angular/language-service": "^5.2.11",
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular/cli": "7.0.6",
+    "@angular/compiler-cli": "7.1.0",
+    "@angular/language-service": "7.1.0",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^10.5.8",
@@ -50,8 +51,8 @@
     "karma-junit-reporter": "^1.2.0",
     "protractor": "^5.4.1",
     "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.6",
     "typings": "^2.1.1",
     "vsts-coverage-styles": "^1.0.7"
   }
